<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fragments_content_padding">


        <ImageView
            android:id="@+id/icon"
            style="@style/Large.TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:text="@string/payment_ver_biometric_authentication_done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lbl"
            style="@style/Large.TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_ver_biometric_authentication_done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fragments_content_padding"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/fragments_content_padding"
                tools:context=".ui.verification.PaymentVerificationFragment">

                <TextView
                    style="@style/Medium.TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_ver_transaction_completed_successfully"
                    android:textStyle="bold" />

                <ImageView
                    style="@style/Large.TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/ic_done_all_24dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_id"
                    style="@style/Large.TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    tools:text="Josh" />

                <TextView
                    android:id="@+id/card_number"
                    style="@style/Small.TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="****2736" />

                <TextView
                    android:id="@+id/amount"
                    style="@style/Medium.TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Payment $200 Done" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/done"
            style="@style/Button.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>